--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-04 19:02+0100\n"
+"POT-Creation-Date: 2014-03-13 20:40+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,149 +29,86 @@ msgstr "English"
 msgid "Votre nom"
 msgstr "Your name"
 
-#: Simplan/event/forms.py:19
-msgid "Séparer les emails par des virgules"
-msgstr ""
+#: Simplan/event/forms.py:17
+msgid "Votre nom ou pseudonyme"
+msgstr "Your username"
 
-#: Simplan/event/forms.py:57
+#: Simplan/event/forms.py:20
+msgid "Votre email"
+msgstr "Email"
+
+#: Simplan/event/forms.py:22
+msgid "Renseignez votre adresse email"
+msgstr "Write your email"
+
+#: Simplan/event/forms.py:25 Simplan/event/forms.py:70
+msgid "Titre de l'évènement"
+msgstr "Event's title"
+
+#: Simplan/event/forms.py:30 Simplan/event/forms.py:75
+#: Simplan/event/forms.py:169
+msgid "Description"
+msgstr "Description"
+
+#: Simplan/event/forms.py:36 Simplan/event/forms.py:81
+msgid "Lieu de l'évènement"
+msgstr "Event's place"
+
+#: Simplan/event/forms.py:77
 msgid "Décrivez votre événement"
 msgstr "Describe your event"
 
-#: Simplan/event/forms.py:82
-msgid "Selectionnez une date"
-msgstr "Select date"
-
 #: Simplan/event/forms.py:103
+msgid "Selectionnez une date"
+msgstr "Select your date"
+
+#: Simplan/event/forms.py:124
 msgid "Saisissez votre option"
-msgstr "Your option"
+msgstr "Write your text option"
 
-#: Simplan/event/forms.py:118
+#: Simplan/event/forms.py:139
 msgid "Ce type de fichier n'est pas supporté"
-msgstr "This filetype are not support"
+msgstr "This filetype are not supported"
 
-#: Simplan/event/forms.py:149 Simplan/event/models.py:28
-msgid "Description du choix"
-msgstr "Choice description"
-
-#: Simplan/event/forms.py:167
-msgid "Séparez les emails par des virgules"
-msgstr ""
-
-#: Simplan/event/models.py:27
+#: Simplan/event/forms.py:164
 msgid "Titre du choix"
 msgstr "Choice title"
 
-#: Simplan/event/models.py:29 Simplan/event/models.py:54
-msgid "Position"
-msgstr "Position"
-
-#: Simplan/event/models.py:30
-msgid "Choix positif"
-msgstr "Positive Choice"
-
-#: Simplan/event/models.py:31
-msgid "Option du choix"
-msgstr "Choice option"
-
-#: Simplan/event/models.py:52
-msgid "Choix requis"
+#: Simplan/event/forms.py:171
+msgid "Description du choix"
 msgstr ""
 
-#: Simplan/event/models.py:53
-msgid "Evenement de l'option"
-msgstr "Event of option"
-
-#: Simplan/event/models.py:86
-msgid "Titre de l'évenement"
-msgstr "Event title"
-
-#: Simplan/event/models.py:87
-msgid "Description"
-msgstr "description"
-
-#: Simplan/event/models.py:88
-msgid "Lieu de l'évenement"
-msgstr "Event place"
-
-#: Simplan/event/models.py:89
-msgid "Slug"
-msgstr "Slug"
-
-#: Simplan/event/models.py:90
-msgid "Slug public"
-msgstr "public Slug"
-
-#: Simplan/event/models.py:91
-msgid "Liste de diffusion"
-msgstr "Mailing list"
-
-#: Simplan/event/models.py:181
-msgid "Auteur de l'évenement"
-msgstr "Author of event"
-
-#: Simplan/event/models.py:182
-msgid "Email de l'auteur"
-msgstr "Email of author"
-
-#: Simplan/event/models.py:192
-msgid "Auteur de l'évènement"
-msgstr ""
-
-#: Simplan/event/models.py:202
-msgid "Date de début"
-msgstr "Start date"
-
-#: Simplan/event/models.py:203
-msgid "Date de fin"
-msgstr "End date"
-
-#: Simplan/event/models.py:216
-msgid "Texte"
-msgstr "Text"
-
-#: Simplan/event/models.py:217
-msgid "Illustration"
-msgstr "Illustration"
-
-#: Simplan/event/models.py:230
-msgid "Choix de l'utilisateur"
-msgstr "User choice"
-
-#: Simplan/event/models.py:239
-msgid "Pseudo du votant"
-msgstr "poller username"
-
-#: Simplan/event/models.py:252
-msgid "Membre votant"
-msgstr "poller user"
+#: Simplan/event/forms.py:189
+msgid "Séparez les emails par des virgules"
+msgstr "Separate emails by comma"
 
 #: templates/base.html:12
 msgid "Sans nom"
-msgstr "No name"
+msgstr "Noname"
 
 #: templates/base.html:42
 msgid "Menu"
-msgstr "Menu"
+msgstr "Navigation"
 
 #: templates/base.html:52
 msgid "Mon profil"
-msgstr "Profile"
+msgstr "My profile"
 
 #: templates/base.html:53
 msgid "Mes paramètres"
-msgstr "Settings"
+msgstr "My settings"
 
 #: templates/base.html:54
 msgid "Mes sondages"
-msgstr "Polls"
+msgstr "My surveys"
 
 #: templates/base.html:55
 msgid "Déconnexion"
-msgstr "Sign up"
+msgstr "Logout"
 
 #: templates/base.html:59
 msgid "S'inscrire"
-msgstr "Registrer"
+msgstr "Register"
 
 #: templates/base.html:60
 msgid "Se connecter"
@@ -185,32 +122,36 @@ msgstr "Source code"
 msgid "Bugs/Suggestions"
 msgstr "Bugs/Suggests"
 
-#: templates/event/new_event.html:7
-msgid "Planifier vos évènements, simplement"
-msgstr "Organize your events, easily"
+#: templates/event/new_event.html:5
+msgid "Accueil"
+msgstr "Home"
 
-#: templates/event/new_event.html:11 templates/event/new_option.html:12
+#: templates/event/new_event.html:9
+msgid "Planifier vos évènements, simplement"
+msgstr "Plan your events, simply"
+
+#: templates/event/new_event.html:13 templates/event/new_option.html:12
 #: templates/event/recap_event.html:12
 msgid "Evènement"
 msgstr "Event"
 
-#: templates/event/new_event.html:12 templates/event/new_option.html:13
+#: templates/event/new_event.html:14 templates/event/new_option.html:13
 #: templates/event/recap_event.html:13
 msgid "Choix"
 msgstr "Choice"
 
-#: templates/event/new_event.html:13 templates/event/new_option.html:14
+#: templates/event/new_event.html:15 templates/event/new_option.html:14
 #: templates/event/recap_event.html:14
 msgid "Récapitulatif"
-msgstr "Summarize"
+msgstr "Summary"
 
-#: templates/event/new_option.html:7 templates/event/recap_event.html:33
+#: templates/event/new_option.html:7 templates/event/recap_event.html:44
 msgid "Options"
 msgstr "Options"
 
 #: templates/event/new_option.html:8
 msgid "Ajouter des options à vos prévisions de planning"
-msgstr "Add new option for your previsions"
+msgstr "Add options to your planning"
 
 #: templates/event/new_option.html:22
 msgid "Options temps"
@@ -224,7 +165,7 @@ msgstr "Free option"
 msgid "Aucune option"
 msgstr "No option"
 
-#: templates/event/new_option.html:77 templates/event/recap_event.html:108
+#: templates/event/new_option.html:77 templates/event/recap_event.html:119
 msgid "Précédent"
 msgstr "Previous"
 
@@ -240,66 +181,68 @@ msgstr "Summary"
 msgid ""
 "Vous vous appretez à terminer votre sondage, n'oubliez pas d'envoyer un "
 "courriel aux invités"
-msgstr ""
+msgstr "You will complete your Simplann, do not forget to "
+"send an email to guests"
 
-#: templates/event/recap_event.html:23
+#: templates/event/recap_event.html:34
 msgid "Lien à partager"
-msgstr "Share link"
+msgstr "Link to share"
 
-#: templates/event/recap_event.html:26
-#, fuzzy
+#: templates/event/recap_event.html:37
 msgid "Emails de diffusion"
 msgstr "Mailing list"
 
-#: templates/event/recap_event.html:27
+#: templates/event/recap_event.html:38
 msgid ""
 "Renseignez les adresses emails des personnes à qui vous souhaitez diffuser "
 "le sondage"
-msgstr ""
+msgstr "Fill the email addresses of people you want to distribute the Simplann"
 
-#: templates/event/recap_event.html:34
-#, fuzzy
+#: templates/event/recap_event.html:45
 msgid "Réponses possibles"
-msgstr "Positive answer ?"
+msgstr "Possibles answers"
 
-#: templates/event/recap_event.html:36
+#: templates/event/recap_event.html:47
 msgid "Ajouter une nouvelle réponse possible à toutes les options"
-msgstr ""
+msgstr "Add a new possible answer for all options"
 
-#: templates/event/recap_event.html:42 templates/event/recap_event.html:64
-#: templates/event/recap_event.html:89
-#, fuzzy
+#: templates/event/recap_event.html:53 templates/event/recap_event.html:75
+#: templates/event/recap_event.html:100
 msgid "Est positif"
-msgstr "Are positive ?"
+msgstr "Is positive"
 
-#: templates/event/recap_event.html:43
+#: templates/event/recap_event.html:54
 msgid "Ajouter"
-msgstr ""
+msgstr "Add"
 
-#: templates/event/recap_event.html:66 templates/event/recap_event.html:91
+#: templates/event/recap_event.html:77 templates/event/recap_event.html:102
 #: templates/event/view_event.html:89
 msgid "Modifier"
 msgstr "Update"
 
-#: templates/event/recap_event.html:67 templates/event/recap_event.html:92
+#: templates/event/recap_event.html:78 templates/event/recap_event.html:103
 msgid "Créer"
 msgstr "Add"
 
-#: templates/event/recap_event.html:71
+#: templates/event/recap_event.html:82
 #, python-format
 msgid ""
 "Supprimer la réponse «%(choice.title)s» pour l'option "
 "«%(option.start_date|date:'d M - H:i')s»"
 msgstr ""
-"Remove answer «%(choice.title)s» for the "
-"«%(option.start_date|date:'d M - H:i')s» option"
+"Remove answer «%(choice.title)s» for option "
+"«%(option.start_date|date:'d M - H:i')s»"
 
-#: templates/event/recap_event.html:96
+#: templates/event/recap_event.html:107
 #, python-format
 msgid "Supprimer la réponse «%(choice.title)s» pour l'option «%(option.text)s»"
-msgstr "Remove answer «%(choice.title)s» for the «%(option.text)s» option"
+msgstr "Remove answer «%(choice.title)s» for option «%(option.text)s»"
 
-#: templates/event/recap_event.html:109
+#: templates/event/recap_event.html:120
+msgid "Envoyer les invitatons"
+msgstr "Send invitations"
+
+#: templates/event/recap_event.html:121
 msgid "Terminer"
 msgstr "End"
 
@@ -308,9 +251,8 @@ msgid "Supprimer"
 msgstr "Remove"
 
 #: templates/event/view_event.html:114
-#, fuzzy
 msgid "La majorité prefère cette option, vous devez essayer"
-msgstr "Major people prefer this option, try it"
+msgstr "The majority preferred this option, you must try"
 
 #: templates/event/view_event.html:128
 msgid "Votre Pseudo"
